--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "prettify": "prettier --write .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "caniuse-lite": "1.0.30001718",
     "clsx": "2.1.1",
     "firebase": "10.13.1",
     "flowbite": "2.5.1",
@@ -40,6 +40,6 @@
     "prettier": "3.3.3",
     "tailwindcss": "3.4.12",
     "typescript": "5.6.2",
-    "vite": "6.0.11"
+    "vite": "6.3.5"
   }
 }
